--- a/index.html
+++ b/index.html
@@ -1,1 +1,5 @@
-
+<!DOCTYPE html>
+<meta charset="utf-8">
+<title>Redirecting to https://rikulaajala.com/</title>
+<meta http-equiv="refresh" content="0; URL=https://rikulaajala.com">
+<link rel="canonical" href="https://rikulaajala.com">
